att tsc problem

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "tsc": "tsc",
+    "build": "npm run tsc",
     "dev": "node build/server.js"
   },
   "dependencies": {
