--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "tsc": "^2.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
