--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "mongoose": "^6.1.6",
-    "tsc": "^2.0.3"
+    "tsc": "^2.0.3",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
