--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "node build/server.js"
+    "dev": "node build/server.js",
+    "dev2": "ts-node-dev src/server.ts",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "mongoose": "^6.1.6",
+    "ts-jest": "^27.1.3",
     "tsc": "^2.0.3",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
+    "@types/mocha": "^9.1.0",
+    "jest": "^27.4.7",
     "ts-node-dev": "^1.1.8"
   }
 }
